# truedex

./: .gitignore  Cargo.toml  calldata.py  func.py  indexer.py  init_vault.py  lock_tokens.py  notes.md  release_tokens.py  requirements.txt  rpc.py  send_calldata.py  server.py  setting.py  setup.sh  space.py  test_history.py  test_rpc_init.py  test_rpc_limit_order.py  test_rpc_market_order.py  test_rpc_mint.py  test_rpc_next_block.py  test_rpc_orders.py  test_rpc_transfer.py
funcs/: zip20.py  zip21.py  zip22.py  zip3.py
src/: lib.rs
static/: call.html  main.html  wallet.js
static/css/: main_v1.css
static/js/: main_v1.js
templates/debug/: base.html  block.html  blocks.html  events.html  overview.html  state.html  transactions.html
